fix: .app-main兼容样式仅对无.app-main-wrap时生效

--- a/packages/theme/css/_layout.scss
+++ b/packages/theme/css/_layout.scss
@@ -208,9 +208,10 @@
     }
   }
 
-  .app-main {
-    flex: 1; // 兼容老项目
-    overflow: auto; // 兼容老项目
+  // 兼容老项目，无.app-main-wrap
+  > .app-main {
+    flex: 1;
+    overflow: auto;
   }
 
   .app-main > .el-card.is-always-shadow {
